# server/internal/entity/refresh_token.go
@@ -1,0 +1,19 @@
+package entity
+
+import "time"
+
+type RefreshToken struct {
+	ID        string
+	UserID    string
+	TokenHash string
+	Revoked   bool
+	ExpiresAt time.Time
+}
+
+func (rt *RefreshToken) IsExpired() bool {
+	return time.Now().After(rt.ExpiresAt)
+}
+
+func (rt *RefreshToken) IsValid() bool {
+	return !rt.Revoked && !rt.IsExpired()
+}
