# server/internal/repository/refresh_token_repository.go
@@ -1,0 +1,8 @@
+package repository
+
+import "expense/internal/entity"
+
+type RefreshTokenRepository interface {
+	Create(token entity.RefreshToken) error
+	FindByToken(token string) (*entity.RefreshToken, error)
+}
